chore(source): update docs

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -2,6 +2,7 @@
   "@lectrum/generator-ui": {
     "initialized": false,
     "educational": true,
+    "checkpoint": true,
     "repositoryOwner": "Lectrum"
   }
 }
